crates/core/snapshots/vue_template_compiler__core__parser__test__bind_dir-3.snap
---
source: src/core/parser.rs
expression: dir

---
Dir:
  name: bind
  argument:
    Static: ^_^
  modifiers:
    - prop
  expression:
    content:
      raw: tt
      ops:
        bits: 18
    location:
      start:
        offset: 13
        line: 1
        column: 14
      end:
        offset: 17
        line: 1
        column: 18
  head_loc:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 12
      line: 1
      column: 13
  location:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 17
      line: 1
      column: 18

